zurimpact-lp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zurimpact-lp
  namespace: zi-prod
  labels:
    app: zurimpact-lp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zurimpact-lp
  template:
    metadata:
      labels:
        app: zurimpact-lp
    spec:
      imagePullSecrets:
      - name: ghcr-pull-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
      - name: web
        image: ghcr.io/zurimpact/zurimpact-lp:0.1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "10m"
            memory: "32Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 60
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          capabilities:
            drop:
            - ALL
