zurimpact-lp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zurimpact-lp
  namespace: zi-prod
spec:
  rules:
  - host: zurimpact-lp.pm4.init-lab.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zurimpact-lp-svc
            port:
              number: 8080
